fix: fix the font color in outline menu when in dark mode

--- a/pdfjs/web/custom-buttons.css
+++ b/pdfjs/web/custom-buttons.css
@@ -354,6 +354,16 @@ body.custom-night-mode #sidebarContainer {
 body.custom-night-mode #sidebarContent {
   background-color: #3a3a3a !important;
   /* 从 #2a2a2a 调亮 */
+  color: #c0c0c0 !important;
+}
+
+body.custom-night-mode .treeItem>a {
+  color: #c0c0c0 !important;
+}
+
+body.custom-night-mode .treeItem.selected>a {
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  color: #fff !important;
 }
 
 body.custom-night-mode .thumbnail {
